<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rm222_mind_14">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_name"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textCapWords"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box_style"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/hint_my_display_name"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_my_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textColorHint="@color/black"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check_box_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/include_junior"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner_id"
            android:layout_width="match_parent"
            style="@style/spinnerstyle"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/immediate_start_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/immediate_start"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/available_start_date"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_date_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="#161b33"
            android:text="@string/preview_message" />


    </LinearLayout>

</ScrollView>